# nr-openai-observability

./: .gitignore  CONTRIBUTING.md  README.md  langchain_example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  python-package.yml
examples/: bedrock_example.py  example.py  example_openai_webapp.py  langchain_example.py  langchain_vectordb_example.py  newrelic.ini  openai_bedrock_comparison.py  openai_chat_completions.py  openai_example.ipynb  openai_quickstart.ipynb
src/nr_openai_observability/: async_langchain_callback.py  bedrock.py  build_events.py  call_vars.py  consts.py  error_handling_decorator.py  langchain_callback.py  monitor.py  monitor_stream.py  openai_monitoring.py  patcher.py  stream_patcher.py
src/nr_openai_observability/patchers/: bedrock.py  langchain.py  openai.py  openai_streaming.py
tests/: conftest.py  test_call_vars.py  test_openai_patch.py
