[tool.poetry]
name = "nr-openai-observability"
version = "0.1.0"
description = "A lightweight tool to monitor your OpenAI workload."
authors = ["AIR <air-opensource@newrelic.com>"]
repository = "https://github.com/newrelic/nr-openai-observability"
readme = "README.md"
homepage = "https://newrelic.com/instant-observability/openai"
keywords = [
  "newrelic",
  "observability",
  "openai",
  "gpt",
  "chatGPT",
  "GPT-4",
  "monitor",
  "generative",
  "ai",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
newrelic = { git = "https://github.com/newrelic/newrelic-python-agent.git", rev = "f8e8153d8723b5742f1baa77d4469de3c3da7b69" }
openai = ">=0.8,<2.0"
tiktoken = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
langchain = "^0.0.300"
chromadb = "^0.4.8"

[tool.poetry.group.bedrock]
optional = true

[tool.poetry.group.bedrock.dependencies]
botocore = ">=1.31.57"
boto3 = ">=1.28.57"
anthropic = ">= 0.3.10"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
