[metadata]
name = nr-openai-observability
version = 1.0.0
author = New Relic
description = An extension for New Relic APM to support AI libraries
long_description = file: README.md, LICENSE
license = Apache-2.0 license
keywords = newrelic, observability, openai, gpt, chatGPT, GPT-4, monitor, generative, ai

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8.1
install_requires =
package_dir=
    =src
packages=find:

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]

[options.extras_require]
openai = openai>=0.8,<2.0
tiktoken = tiktoken>=0.5.1

install_requires =
  newrelic @ git+https://git@github.com/newrelic/newrelic-python-agent.git@c7d3fbb372ed6327694c77480e3fa44fdc658d0e

[options.packages.find]
where=src
